# actix-web-user-signup-example

./: .env  .gitignore  Cargo.toml  LICENSE  README.md  docker-compose.yml
examples/: main.rs
examples/env/: .env  dot_env.rs  mod.rs  std_env.rs
migrations/: 20220515113937_create-tables.sql  20220527175825_create-users.sql
src/: config.rs  error.rs  main.rs  state.rs
src/models/: hello.rs  user.rs
src/modules/: user.rs
src/routes/: api.rs  mod.rs
src/routes/v1/: user.rs
src/routes/v1/user/: api.rs  handler.rs  mod.rs
src/services/: crypto.rs
src/utils/: defaults.rs
