[package]
name = "my_server"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
config = "0.13.1"
dotenv = "0.15.0"
actix-rt="2.7.0"
actix-web = "4"
mysql = "22.1.0"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
sqlx = { version = "0.5", features = [
    "postgres",
    "runtime-tokio-rustls",
    "macros",
    "chrono"
] }