[package]
name = "my_server"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
config = "0.13.1"
dotenv = "0.15.0"
actix-rt = "2.7.0"
actix-web = "4"
sqlx = { version = "0.5", features = [
    "postgres",
    "runtime-tokio-rustls",
    "macros",
    "chrono"
] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0.0", features = ["serde", "v4"] }
serde = { version = "1.0", features = ["derive"] }
validator = "0.14.0"
validator_derive = "0.14.0"
jsonwebtoken = "8.1.0"
argonautica = "0.2.0"
